fix menu z-index

--- a/coala/themes/ace/styles/fix.css
+++ b/coala/themes/ace/styles/fix.css
@@ -93,3 +93,7 @@ div.modal-body {
 .c-grid-body table {
     width: 100% !important;
 }
+
+.nav-list > li.active:after {
+    z-index: 9999;
+}
